Converting price from usd to dkk

--- a/assignment1/assignment-solution.ipynb
+++ b/assignment1/assignment-solution.ipynb
@@ -966,17 +966,16 @@
     "relevant_listings\n",
     "\n",
     "# Remove any rows where number of reviews == 0\n",
-    "num_of_reviews_cleaned = relevant_listings[relevant_listings['number_of_reviews'] != 0]\n",
+    "relevant_listings = relevant_listings[relevant_listings['number_of_reviews'] != 0]\n",
     "\n",
-    "num_of_reviews_cleaned\n",
+    "relevant_listings\n",
     "\n",
     "pd.set_option('display.max_rows', 500)\n",
     "pd.set_option('display.max_columns', 500)\n",
     "\n",
     "# Remove any rows that contain not defined entries in them\n",
-    "nan_cleansed = num_of_reviews_cleaned[~num_of_reviews_cleaned.isna().any(axis=1)]\n",
-    "\n",
-    "nan_cleansed\n"
+    "relevant_listings = relevant_listings.dropna()#num_of_reviews_cleaned[~num_of_reviews_cleaned.isna().any(axis=1)]\n",
+    "relevant_listings\n"
    ]
   },
   {
@@ -1010,18 +1009,20 @@
    ],
    "source": [
     "# Define the exchange rate (1 USD to DKK)\n",
-    "exchange_rate_usd_to_dkk = 6.44  # Replace with the actual exchange rate\n",
+    "exchange_rate_usd_to_dkk = 6.95\n",
     "\n",
     "# Define a conversion function to convert USD to DKK\n",
-    "def convert_to_dkk(price_str):\n",
-    "    price_usd = float(price_str.replace('$', '').replace(',', ''))\n",
-    "    price_dkk = price_usd * exchange_rate_usd_to_dkk\n",
-    "    return price_dkk\n",
+    "def convert_usd_to_dkk(price_usd):\n",
+    "    price_dkk = round(price_usd * exchange_rate_usd_to_dkk, 4)\n",
+    "    price_dkk_str = str(price_dkk) + \"dkk\"\n",
+    "    return price_dkk_str\n",
+    "\n",
+    "# define the mapping table\n",
+    "mapping_table = str.maketrans({'$': '', ',': ''})\n",
     "\n",
     "# Apply the conversion function to the 'price' column\n",
-    "nan_cleansed['price'] = nan_cleansed['price'].apply(convert_to_dkk)\n",
-    "\n",
-    "nan_cleansed"
+    "relevant_listings['price'] = relevant_listings['price'].apply(lambda x: x.translate(mapping_table)).apply(pd.to_numeric).apply(convert_usd_to_dkk)#.apply(lambda x: x*exchange_rate_usd_to_dkk).apply(lambda x: str(x)+ \"dkk\")\n",
+    "relevant_listings"
    ]
   }
  ],
