--- a/assignment1/assignment-solution.ipynb
+++ b/assignment1/assignment-solution.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 239,
    "metadata": {},
    "outputs": [
     {
@@ -466,7 +466,7 @@
        "[13815 rows x 75 columns]"
       ]
      },
-     "execution_count": 68,
+     "execution_count": 239,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -488,9 +488,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 240,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(13815, 22)\n",
+      "id                                   0\n",
+      "name                                 0\n",
+      "host_id                              0\n",
+      "host_name                            1\n",
+      "neighbourhood_cleansed               0\n",
+      "latitude                             0\n",
+      "longitude                            0\n",
+      "room_type                            0\n",
+      "price                                0\n",
+      "minimum_nights                       0\n",
+      "number_of_reviews                    0\n",
+      "last_review                       1645\n",
+      "review_scores_rating              1645\n",
+      "review_scores_accuracy            1688\n",
+      "review_scores_cleanliness         1688\n",
+      "review_scores_checkin             1688\n",
+      "review_scores_communication       1688\n",
+      "review_scores_location            1689\n",
+      "review_scores_value               1688\n",
+      "reviews_per_month                 1645\n",
+      "calculated_host_listings_count       0\n",
+      "availability_365                     0\n",
+      "dtype: int64\n"
+     ]
+    },
     {
      "data": {
       "text/html": [
@@ -900,7 +930,7 @@
        "[13815 rows x 22 columns]"
       ]
      },
-     "execution_count": 69,
+     "execution_count": 240,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -930,6 +960,9 @@
     "    'calculated_host_listings_count',  \n",
     "    'availability_365'\n",
     "]]\n",
+    "# Get an overview of the data - number of rows and columns, which colums have NaN values and how many\n",
+    "print(relevant_listings.shape)\n",
+    "print(relevant_listings.isnull().sum())\n",
     "\n",
     "relevant_listings"
    ]
@@ -943,7 +976,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 241,
    "metadata": {},
    "outputs": [
     {
@@ -1355,7 +1388,7 @@
        "[12126 rows x 22 columns]"
       ]
      },
-     "execution_count": 70,
+     "execution_count": 241,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1378,7 +1411,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 242,
    "metadata": {},
    "outputs": [
     {
@@ -1790,7 +1823,7 @@
        "[12126 rows x 22 columns]"
       ]
      },
-     "execution_count": 71,
+     "execution_count": 242,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1833,7 +1866,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 243,
    "metadata": {},
    "outputs": [
     {
@@ -1939,7 +1972,7 @@
        "[3195 rows x 2 columns]"
       ]
      },
-     "execution_count": 72,
+     "execution_count": 243,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1989,7 +2022,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 244,
    "metadata": {},
    "outputs": [
     {
@@ -2095,7 +2128,7 @@
        "[2840 rows x 2 columns]"
       ]
      },
-     "execution_count": 73,
+     "execution_count": 244,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2135,7 +2168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 245,
    "metadata": {},
    "outputs": [
     {
@@ -2547,7 +2580,7 @@
        "[12126 rows x 23 columns]"
       ]
      },
-     "execution_count": 74,
+     "execution_count": 245,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2585,7 +2618,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 246,
    "metadata": {},
    "outputs": [
     {
@@ -2660,7 +2693,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 247,
    "metadata": {},
    "outputs": [
     {
@@ -2708,7 +2741,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 248,
    "metadata": {},
    "outputs": [
     {
@@ -2765,7 +2798,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 249,
    "metadata": {},
    "outputs": [
     {
@@ -2812,7 +2845,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 250,
    "metadata": {},
    "outputs": [
     {
@@ -2952,7 +2985,7 @@
        "max                 5.000000  "
       ]
      },
-     "execution_count": 79,
+     "execution_count": 250,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2974,7 +3007,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 251,
    "metadata": {},
    "outputs": [
     {
@@ -3029,40 +3062,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 252,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(12126, 23)\n",
-      "id                                0\n",
-      "name                              0\n",
-      "host_id                           0\n",
-      "host_name                         0\n",
-      "neighbourhood_cleansed            0\n",
-      "latitude                          0\n",
-      "longitude                         0\n",
-      "room_type                         0\n",
-      "price                             0\n",
-      "minimum_nights                    0\n",
-      "number_of_reviews                 0\n",
-      "last_review                       0\n",
-      "review_scores_rating              0\n",
-      "review_scores_accuracy            0\n",
-      "review_scores_cleanliness         0\n",
-      "review_scores_checkin             0\n",
-      "review_scores_communication       0\n",
-      "review_scores_location            0\n",
-      "review_scores_value               0\n",
-      "reviews_per_month                 0\n",
-      "calculated_host_listings_count    0\n",
-      "availability_365                  0\n",
-      "price_bin                         0\n",
-      "dtype: int64\n"
-     ]
-    },
     {
      "data": {
       "text/html": [
@@ -3423,15 +3425,12 @@
        "[12126 rows x 18 columns]"
       ]
      },
-     "execution_count": 81,
+     "execution_count": 252,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "print(relevant_listings.shape)\n",
-    "print(relevant_listings.isnull().sum())\n",
-    "\n",
     "# Remove some fields\n",
     "relevant_listings = relevant_listings.drop(['host_name', \"name\", \"price_bin\", \"last_review\", \"calculated_host_listings_count\"], axis='columns')\n",
     "\n",
@@ -3439,18 +3438,23 @@
     "mapping_neighbourhood = {}\n",
     "mapping_room_type = {}\n",
     "\n",
+    "# Get a list of all neighbourhoods\n",
     "neighborhood_list = relevant_listings['neighbourhood_cleansed'].unique().tolist()\n",
     "item_number = 0\n",
+    "# Give each neighbourhood a coresponding number\n",
     "for neighborhood in neighborhood_list:\n",
     "    mapping_neighbourhood[neighborhood] = item_number\n",
     "    item_number += 1\n",
     "\n",
+    "# Get a list of all room_types\n",
     "room_type_list = relevant_listings['room_type'].unique().tolist()\n",
     "item_number = 0\n",
+    "# Give each room_type a coresponding number\n",
     "for room_type in room_type_list:\n",
     "    mapping_room_type[room_type] = item_number\n",
     "    item_number += 1\n",
     "\n",
+    "# Map the neighbourhoods and the room_types to their coresponding numbers\n",
     "relevant_listings['neighbourhood_cleansed'] = relevant_listings['neighbourhood_cleansed'].map(mapping_neighbourhood)\n",
     "relevant_listings['room_type'] = relevant_listings['room_type'].map(mapping_room_type)\n",
     "relevant_listings"
@@ -3465,7 +3469,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 253,
    "metadata": {},
    "outputs": [
     {
@@ -3853,7 +3857,7 @@
        "[12126 rows x 19 columns]"
       ]
      },
-     "execution_count": 82,
+     "execution_count": 253,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3878,31 +3882,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 254,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Number of data points in training set and test set, respectively: 9094 and 3032\n",
-      "Gaussian model accuracy on the original data: 0.5224274406332454\n"
+      "Number of data points in training set and test set, respectively: 9700 and 2426\n",
+      "Gaussian model accuracy on the original data: 0.5259686727122836\n"
      ]
     }
    ],
    "source": [
     "from sklearn.naive_bayes import GaussianNB\n",
     "\n",
+    "# Get the labels\n",
     "labels = relevant_listings['price_affordability']\n",
+    "# Drop the label column from the data\n",
     "relevant_listings = relevant_listings.drop(['price_affordability'], axis='columns')\n",
     "\n",
-    "train_data, test_data, train_labels, test_labels = train_test_split(relevant_listings, labels, train_size=0.75, test_size=0.25, random_state=0)\n",
+    "# Separate the data into test and train\n",
+    "train_data, test_data, train_labels, test_labels = train_test_split(relevant_listings, labels, train_size=0.80, test_size=0.20, random_state=0)\n",
     "print(\"Number of data points in training set and test set, respectively: {} and {}\".format(train_data.shape[0], test_data.shape[0]))\n",
     "\n",
+    "# Naïve Bayers\n",
     "gaussian = GaussianNB()\n",
     "\n",
+    "#Train\n",
     "gaussian.fit(train_data, train_labels)\n",
     "\n",
+    "#Display the accuracy using test data\n",
     "print(\"Gaussian model accuracy on the original data: {}\".format(gaussian.score(test_data,test_labels)))"
    ]
   },
@@ -3915,15 +3925,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 255,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Number of data points in training set and test set, respectively: 9094 and 3032\n",
-      "Model accuracy on the original data: 0.5267150395778364\n"
+      "Number of data points in training set and test set, respectively: 9700 and 2426\n",
+      "K Nearest Neighbors model accuracy on the original data: 0.5342126957955482\n"
      ]
     }
    ],
@@ -3932,11 +3942,16 @@
     "from sklearn.neighbors import KNeighborsClassifier\n",
     "\n",
     "# Separate the data into test and train\n",
-    "train_data, test_data, train_labels, test_labels = train_test_split(relevant_listings, labels, train_size=0.75, test_size=0.25, random_state=0)\n",
+    "train_data, test_data, train_labels, test_labels = train_test_split(relevant_listings, labels, train_size=0.80, test_size=0.20, random_state=0)\n",
     "print(\"Number of data points in training set and test set, respectively: {} and {}\".format(train_data.shape[0], test_data.shape[0]))\n",
     "\n",
-    "knn = KNeighborsClassifier(n_neighbors=3)\n",
+    "# K-nearest neighbour - using 7 neighbours\n",
+    "knn = KNeighborsClassifier(n_neighbors=7)\n",
+    "\n",
+    "# Train\n",
     "knn.fit(train_data, train_labels)\n",
+    "\n",
+    "#Display the accuracy using test data\n",
     "print(\"K Nearest Neighbors model accuracy on the original data: {}\".format(knn.score(test_data,test_labels)))"
    ]
   },
@@ -3962,8 +3977,8 @@
     "\n",
     "A dummy variable was use to classify each listing based on the price into either \"expensive\" or \"affordable\".\n",
     "\n",
-    "Finally 2 models have been built one Naive Bayes and another K Nearest Neighbor which showed a similar accuracy of ±0.52.\n",
-    "Further improvement could be done like to the models foe example by using data imputation on the models to deal with the outliers."
+    "Finally 2 models have been built one Naive Bayes and another K Nearest Neighbor which showed a similar accuracy of ±0.52. Nontheless, the KNN give higher accuracy after tunign the n_neighbor parameter - it seems n_neighbor = 7 gives the highest score for data set - 0.5342126957955482.\n",
+    "Further improvement could be done, for example by using data imputation on the models to deal with the outliers. An other improvement could be to separate the data into train (70%), test(20%) and validate(10%)."
    ]
   }
  ],
@@ -3983,7 +3998,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.10.12"
   },
   "orig_nbformat": 4
  },
