--- a/assignment3/assignment3-solution.ipynb
+++ b/assignment3/assignment3-solution.ipynb
@@ -4387,6 +4387,18 @@
     "plt.grid(True)\n",
     "plt.show()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 5) Conclusions:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
