--- a/assignment4/assignment4-solution.ipynb
+++ b/assignment4/assignment4-solution.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,8 @@
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "import mglearn\n",
-    "from sklearn.manifold import TSNE"
+    "from sklearn.manifold import TSNE\n",
+    "from adjustText import adjust_text"
    ]
   },
   {
@@ -770,7 +771,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -874,14 +875,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/22/rg8206c93c77krq73zpytwzr0000gn/T/ipykernel_39303/2994575220.py:39: UserWarning: The figure layout has changed to tight\n",
+      "/opt/homebrew/lib/python3.11/site-packages/sklearn/utils/validation.py:767: FutureWarning: is_sparse is deprecated and will be removed in a future version. Check `isinstance(dtype, pd.SparseDtype)` instead.\n",
+      "  if not hasattr(array, \"sparse\") and array.dtypes.apply(is_sparse).any():\n",
+      "/opt/homebrew/lib/python3.11/site-packages/sklearn/utils/validation.py:605: FutureWarning: is_sparse is deprecated and will be removed in a future version. Check `isinstance(dtype, pd.SparseDtype)` instead.\n",
+      "  if is_sparse(pd_dtype):\n",
+      "/opt/homebrew/lib/python3.11/site-packages/sklearn/utils/validation.py:614: FutureWarning: is_sparse is deprecated and will be removed in a future version. Check `isinstance(dtype, pd.SparseDtype)` instead.\n",
+      "  if is_sparse(pd_dtype) or not is_extension_array_dtype(pd_dtype):\n",
+      "/opt/homebrew/lib/python3.11/site-packages/sklearn/utils/validation.py:767: FutureWarning: is_sparse is deprecated and will be removed in a future version. Check `isinstance(dtype, pd.SparseDtype)` instead.\n",
+      "  if not hasattr(array, \"sparse\") and array.dtypes.apply(is_sparse).any():\n",
+      "/opt/homebrew/lib/python3.11/site-packages/sklearn/utils/validation.py:605: FutureWarning: is_sparse is deprecated and will be removed in a future version. Check `isinstance(dtype, pd.SparseDtype)` instead.\n",
+      "  if is_sparse(pd_dtype):\n",
+      "/opt/homebrew/lib/python3.11/site-packages/sklearn/utils/validation.py:614: FutureWarning: is_sparse is deprecated and will be removed in a future version. Check `isinstance(dtype, pd.SparseDtype)` instead.\n",
+      "  if is_sparse(pd_dtype) or not is_extension_array_dtype(pd_dtype):\n",
+      "/var/folders/22/rg8206c93c77krq73zpytwzr0000gn/T/ipykernel_49964/39611392.py:52: UserWarning: The figure layout has changed to tight\n",
       "  plt.tight_layout()\n"
      ]
     },
@@ -897,6 +910,19 @@
     }
    ],
    "source": [
+    "# Load and extract the numerical data\n",
+    "df = pd.read_excel('alldata.xlsx', engine='openpyxl')\n",
+    "X = df.drop(columns=['navn', 'parti', 'storkreds', 'alder'])\n",
+    "\n",
+    "# Standardizing the data\n",
+    "X_standardized = StandardScaler().fit_transform(X)\n",
+    "\n",
+    "features = X.columns\n",
+    "\n",
+    "# Applying PCA\n",
+    "pca = PCA(n_components=2)\n",
+    "principalComponents_pca = pca.fit_transform(X_standardized)\n",
+    "\n",
     "# Extract loadings from PCA\n",
     "loadings = pca.components_.T\n",
     "\n",
@@ -938,6 +964,18 @@
     "plt.tight_layout()\n",
     "\n",
     "plt.show()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**The influence of the original features on the axis placement of the PCs:**_<br/>\n",
+    "\n",
+    "The above illustration display the loadings of the original features on the two principal components (PC1 and PC2) derived from a PCA transformation.\n",
+    "The bar heights (either positive or negative) represent the loadings of each original feature on the principal components. They describes the influence or weight of each original feature on the principal component. The sign (positive/negative) indicates the direction towards which the original features influence the resulting PCs.<br/>\n",
+    "\n",
+    "For example in the loadings diagram for the PC 1 we can see that features 537 and 543 contribute the most to a making the PC1 gain a positive value. The real world interpretation is that questions 537 and 543 place a candidate on the \"right\" side of the political spectrum."
    ]
   },
   {
@@ -2191,7 +2229,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.11.6"
   }
  },
  "nbformat": 4,
