85% done with assignment 6

--- a/assignment6/Solution.ipynb
+++ b/assignment6/Solution.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "__(a)__ Train a convolutional neural network on the data. Find a good set of hyperparameters for the model. Do you think a convolutional neural network is suitable for this kind of problem? Why/why not?"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -25,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -34,7 +41,7 @@
        "'/'"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -46,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -76,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -106,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -123,45 +130,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Model: \"sequential_14\"\n",
+      "Model: \"sequential_10\"\n",
       "_________________________________________________________________\n",
       "Layer (type)                 Output Shape              Param #   \n",
       "=================================================================\n",
-      "conv2d_26 (Conv2D)           (None, 62, 65, 16)        160       \n",
+      "conv2d_22 (Conv2D)           (None, 62, 65, 240)       2400      \n",
       "_________________________________________________________________\n",
-      "max_pooling2d_4 (MaxPooling2 (None, 20, 21, 16)        0         \n",
+      "max_pooling2d_10 (MaxPooling (None, 20, 21, 240)       0         \n",
       "_________________________________________________________________\n",
-      "spatial_dropout2d_26 (Spatia (None, 20, 21, 16)        0         \n",
+      "spatial_dropout2d_21 (Spatia (None, 20, 21, 240)       0         \n",
       "_________________________________________________________________\n",
-      "average_pooling2d_20 (Averag (None, 10, 10, 16)        0         \n",
+      "average_pooling2d_18 (Averag (None, 10, 10, 240)       0         \n",
       "_________________________________________________________________\n",
-      "conv2d_27 (Conv2D)           (None, 10, 10, 32)        4640      \n",
+      "conv2d_23 (Conv2D)           (None, 10, 10, 120)       259320    \n",
       "_________________________________________________________________\n",
-      "spatial_dropout2d_27 (Spatia (None, 10, 10, 32)        0         \n",
+      "spatial_dropout2d_22 (Spatia (None, 10, 10, 120)       0         \n",
       "_________________________________________________________________\n",
-      "average_pooling2d_21 (Averag (None, 5, 5, 32)          0         \n",
+      "average_pooling2d_19 (Averag (None, 5, 5, 120)         0         \n",
       "_________________________________________________________________\n",
-      "conv2d_28 (Conv2D)           (None, 5, 5, 120)         34680     \n",
+      "flatten_10 (Flatten)         (None, 3000)              0         \n",
       "_________________________________________________________________\n",
-      "spatial_dropout2d_28 (Spatia (None, 5, 5, 120)         0         \n",
+      "dense_19 (Dense)             (None, 150)               450150    \n",
       "_________________________________________________________________\n",
-      "flatten_13 (Flatten)         (None, 3000)              0         \n",
+      "dropout_9 (Dropout)          (None, 150)               0         \n",
       "_________________________________________________________________\n",
-      "dense_27 (Dense)             (None, 84)                252084    \n",
-      "_________________________________________________________________\n",
-      "dropout_13 (Dropout)         (None, 84)                0         \n",
-      "_________________________________________________________________\n",
-      "dense_28 (Dense)             (None, 4)                 340       \n",
+      "dense_20 (Dense)             (None, 4)                 604       \n",
       "=================================================================\n",
-      "Total params: 291,904\n",
-      "Trainable params: 291,904\n",
+      "Total params: 712,474\n",
+      "Trainable params: 712,474\n",
       "Non-trainable params: 0\n",
       "_________________________________________________________________\n"
      ]
@@ -171,28 +174,28 @@
     "es = tf.keras.callbacks.EarlyStopping(monitor = 'val_loss', patience = 10, restore_best_weights=True)\n",
     "\n",
     "cnn = tf.keras.models.Sequential([\n",
-    "    layers.Conv2D(16, 3, activation='relu', padding='same', input_shape=X_train[0].shape),\n",
+    "    layers.Conv2D(240, 3, activation='relu', padding='same', input_shape=X_train[0].shape),\n",
     "    layers.MaxPooling2D((3)),\n",
     "    layers.SpatialDropout2D(.4),\n",
     "    layers.AveragePooling2D(),\n",
-    "    #layers.Conv2D(32, 3, activation='relu', padding='same'),\n",
-    "    #layers.SpatialDropout2D(.4),\n",
-    "    #layers.AveragePooling2D(),\n",
-    "    #layers.Conv2D(120, 3, activation='relu', padding='same'),\n",
+    "    layers.Conv2D(120, 3, activation='relu', padding='same'),\n",
+    "    layers.SpatialDropout2D(.4),\n",
+    "    layers.AveragePooling2D(),\n",
+    "    #layers.Conv2D(16, 3, activation='relu', padding='same'),\n",
     "    #layers.SpatialDropout2D(.4),\n",
     "    layers.Flatten(),\n",
-    "    layers.Dense(units=84, activation='relu'),\n",
+    "    layers.Dense(units=150, activation='relu'),\n",
     "    layers.Dropout(.4),\n",
     "    layers.Dense(units=4, activation='softmax')\n",
     "])\n",
     "\n",
-    "cnn.compile(loss = 'categorical_crossentropy', optimizer = tf.keras.optimizers.Adam(learning_rate = 0.0001), metrics = ['accuracy'])\n",
+    "cnn.compile(loss = 'categorical_crossentropy', optimizer = tf.keras.optimizers.SGD(learning_rate = 0.0001), metrics = ['accuracy'])\n",
     "cnn.summary()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -201,71 +204,33 @@
      "text": [
       "Train on 9441 samples, validate on 3148 samples\n",
       "Epoch 1/100\n",
-      "9441/9441 [==============================] - 859s 91ms/sample - loss: 1.3866 - accuracy: 0.2508 - val_loss: 1.3977 - val_accuracy: 0.2367\n",
+      "9441/9441 [==============================] - 3s 312us/sample - loss: 1.5047 - accuracy: 0.2457 - val_loss: 1.4386 - val_accuracy: 0.2446\n",
       "Epoch 2/100\n",
-      "9441/9441 [==============================] - 1s 107us/sample - loss: 1.4045 - accuracy: 0.2572 - val_loss: 1.3886 - val_accuracy: 0.2564\n",
+      "9441/9441 [==============================] - 3s 296us/sample - loss: 1.3870 - accuracy: 0.2542 - val_loss: 1.4392 - val_accuracy: 0.2481\n",
       "Epoch 3/100\n",
-      "9441/9441 [==============================] - 1s 102us/sample - loss: 1.3913 - accuracy: 0.2557 - val_loss: 1.3877 - val_accuracy: 0.2570\n",
+      "9441/9441 [==============================] - 3s 292us/sample - loss: 1.3863 - accuracy: 0.2632 - val_loss: 1.4388 - val_accuracy: 0.2402\n",
       "Epoch 4/100\n",
-      "9441/9441 [==============================] - 1s 118us/sample - loss: 1.3900 - accuracy: 0.2519 - val_loss: 1.3873 - val_accuracy: 0.2564\n",
+      "9441/9441 [==============================] - 3s 288us/sample - loss: 1.3871 - accuracy: 0.2479 - val_loss: 1.4386 - val_accuracy: 0.2405\n",
       "Epoch 5/100\n",
-      "9441/9441 [==============================] - 1s 105us/sample - loss: 1.3909 - accuracy: 0.2568 - val_loss: 1.3894 - val_accuracy: 0.2367\n",
+      "9441/9441 [==============================] - 3s 287us/sample - loss: 1.3865 - accuracy: 0.2490 - val_loss: 1.4397 - val_accuracy: 0.2408\n",
       "Epoch 6/100\n",
-      "9441/9441 [==============================] - 1s 101us/sample - loss: 1.3917 - accuracy: 0.2491 - val_loss: 1.3882 - val_accuracy: 0.2351\n",
+      "9441/9441 [==============================] - 3s 292us/sample - loss: 1.3862 - accuracy: 0.2592 - val_loss: 1.4392 - val_accuracy: 0.2370\n",
       "Epoch 7/100\n",
-      "9441/9441 [==============================] - 1s 100us/sample - loss: 1.3894 - accuracy: 0.2551 - val_loss: 1.3883 - val_accuracy: 0.2405\n",
+      "9441/9441 [==============================] - 3s 286us/sample - loss: 1.3872 - accuracy: 0.2440 - val_loss: 1.4396 - val_accuracy: 0.2408\n",
       "Epoch 8/100\n",
-      "9441/9441 [==============================] - 1s 113us/sample - loss: 1.3902 - accuracy: 0.2526 - val_loss: 1.3867 - val_accuracy: 0.2557\n",
+      "9441/9441 [==============================] - 3s 297us/sample - loss: 1.3870 - accuracy: 0.2466 - val_loss: 1.4390 - val_accuracy: 0.2433\n",
       "Epoch 9/100\n",
-      "9441/9441 [==============================] - 1s 97us/sample - loss: 1.3909 - accuracy: 0.2504 - val_loss: 1.3870 - val_accuracy: 0.2554\n",
+      "9441/9441 [==============================] - 3s 299us/sample - loss: 1.3870 - accuracy: 0.2487 - val_loss: 1.4388 - val_accuracy: 0.2449\n",
       "Epoch 10/100\n",
-      "9441/9441 [==============================] - 1s 99us/sample - loss: 1.3909 - accuracy: 0.2516 - val_loss: 1.3868 - val_accuracy: 0.2557\n",
+      "9441/9441 [==============================] - 3s 370us/sample - loss: 1.3867 - accuracy: 0.2503 - val_loss: 1.4403 - val_accuracy: 0.2525\n",
       "Epoch 11/100\n",
-      "9441/9441 [==============================] - 1s 104us/sample - loss: 1.3915 - accuracy: 0.2538 - val_loss: 1.3870 - val_accuracy: 0.2557\n",
+      "9441/9441 [==============================] - 3s 371us/sample - loss: 1.3868 - accuracy: 0.2576 - val_loss: 1.4389 - val_accuracy: 0.2513\n",
       "Epoch 12/100\n",
-      "9441/9441 [==============================] - 1s 102us/sample - loss: 1.3889 - accuracy: 0.2570 - val_loss: 1.3870 - val_accuracy: 0.2570\n",
+      "9441/9441 [==============================] - 3s 352us/sample - loss: 1.3866 - accuracy: 0.2526 - val_loss: 1.4390 - val_accuracy: 0.2379\n",
       "Epoch 13/100\n",
-      "9441/9441 [==============================] - 1s 102us/sample - loss: 1.3904 - accuracy: 0.2552 - val_loss: 1.3867 - val_accuracy: 0.2557\n",
+      "9441/9441 [==============================] - 3s 319us/sample - loss: 1.3870 - accuracy: 0.2419 - val_loss: 1.4387 - val_accuracy: 0.2541\n",
       "Epoch 14/100\n",
-      "9441/9441 [==============================] - 1s 102us/sample - loss: 1.3914 - accuracy: 0.2538 - val_loss: 1.3868 - val_accuracy: 0.2570\n",
-      "Epoch 15/100\n",
-      "9441/9441 [==============================] - 1s 98us/sample - loss: 1.3904 - accuracy: 0.2561 - val_loss: 1.3871 - val_accuracy: 0.2567\n",
-      "Epoch 16/100\n",
-      "9441/9441 [==============================] - 1s 120us/sample - loss: 1.3880 - accuracy: 0.2551 - val_loss: 1.3874 - val_accuracy: 0.2579\n",
-      "Epoch 17/100\n",
-      "9441/9441 [==============================] - 1s 108us/sample - loss: 1.3881 - accuracy: 0.2538 - val_loss: 1.3874 - val_accuracy: 0.2579\n",
-      "Epoch 18/100\n",
-      "9441/9441 [==============================] - 1s 124us/sample - loss: 1.3890 - accuracy: 0.2551 - val_loss: 1.3870 - val_accuracy: 0.2579\n",
-      "Epoch 19/100\n",
-      "9441/9441 [==============================] - 1s 113us/sample - loss: 1.3886 - accuracy: 0.2528 - val_loss: 1.3867 - val_accuracy: 0.2589\n",
-      "Epoch 20/100\n",
-      "9441/9441 [==============================] - 1s 149us/sample - loss: 1.3889 - accuracy: 0.2563 - val_loss: 1.3867 - val_accuracy: 0.2576\n",
-      "Epoch 21/100\n",
-      "9441/9441 [==============================] - 2s 176us/sample - loss: 1.3905 - accuracy: 0.2495 - val_loss: 1.3866 - val_accuracy: 0.2592\n",
-      "Epoch 22/100\n",
-      "9441/9441 [==============================] - 1s 134us/sample - loss: 1.3902 - accuracy: 0.2534 - val_loss: 1.3866 - val_accuracy: 0.2579\n",
-      "Epoch 23/100\n",
-      "9441/9441 [==============================] - 1s 118us/sample - loss: 1.3896 - accuracy: 0.2529 - val_loss: 1.3864 - val_accuracy: 0.2589\n",
-      "Epoch 24/100\n",
-      "9441/9441 [==============================] - 1s 117us/sample - loss: 1.3884 - accuracy: 0.2541 - val_loss: 1.3867 - val_accuracy: 0.2576\n",
-      "Epoch 25/100\n",
-      "9441/9441 [==============================] - 1s 122us/sample - loss: 1.3864 - accuracy: 0.2548 - val_loss: 1.3867 - val_accuracy: 0.2570\n",
-      "Epoch 26/100\n",
-      "9441/9441 [==============================] - 1s 119us/sample - loss: 1.3889 - accuracy: 0.2470 - val_loss: 1.3866 - val_accuracy: 0.2579\n",
-      "Epoch 27/100\n",
-      "9441/9441 [==============================] - 1s 118us/sample - loss: 1.3870 - accuracy: 0.2537 - val_loss: 1.3866 - val_accuracy: 0.2583\n",
-      "Epoch 28/100\n",
-      "9441/9441 [==============================] - 1s 123us/sample - loss: 1.3866 - accuracy: 0.2536 - val_loss: 1.3867 - val_accuracy: 0.2579\n",
-      "Epoch 29/100\n",
-      "9441/9441 [==============================] - 1s 153us/sample - loss: 1.3875 - accuracy: 0.2554 - val_loss: 1.3867 - val_accuracy: 0.2583\n",
-      "Epoch 30/100\n",
-      "9441/9441 [==============================] - 1s 109us/sample - loss: 1.3888 - accuracy: 0.2534 - val_loss: 1.3867 - val_accuracy: 0.2579\n",
-      "Epoch 31/100\n",
-      "9441/9441 [==============================] - 1s 103us/sample - loss: 1.3870 - accuracy: 0.2521 - val_loss: 1.3867 - val_accuracy: 0.2579\n",
-      "Epoch 32/100\n",
-      "9441/9441 [==============================] - 1s 107us/sample - loss: 1.3884 - accuracy: 0.2538 - val_loss: 1.3866 - val_accuracy: 0.2579\n",
-      "Epoch 33/100\n",
-      "9441/9441 [==============================] - 1s 132us/sample - loss: 1.3884 - accuracy: 0.2558 - val_loss: 1.3866 - val_accuracy: 0.2573\n"
+      "9441/9441 [==============================] - 3s 302us/sample - loss: 1.3865 - accuracy: 0.2489 - val_loss: 1.4395 - val_accuracy: 0.2424\n"
      ]
     }
    ],
@@ -278,18 +243,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "9441/9441 [==============================] - 0s 45us/sample - loss: 1.5041 - accuracy: 0.2546\n",
-      "3148/3148 [==============================] - 0s 47us/sample - loss: 1.4800 - accuracy: 0.2630\n",
-      "On train data: Loss = 1.5041, accuracy = 0.2546\n",
-      "On test data: Loss = 1.4800, accuracy = 0.2630\n",
-      "Error on test data: 73.70%\n"
+      "9441/9441 [==============================] - 1s 70us/sample - loss: 1.8409 - accuracy: 0.2449\n",
+      "3148/3148 [==============================] - 0s 72us/sample - loss: 1.8256 - accuracy: 0.2456\n",
+      "On train data: Loss = 1.8409, accuracy = 0.2449\n",
+      "On test data: Loss = 1.8256, accuracy = 0.2456\n",
+      "Error on test data: 75.44%\n"
      ]
     }
    ],
@@ -299,6 +264,97 @@
     "print(\"On train data: Loss = {loss:.4f}, accuracy = {accuracy:.4f}\".format(loss=train_eval[0], accuracy=train_eval[1]))\n",
     "print(\"On test data: Loss = {loss:.4f}, accuracy = {accuracy:.4f}\".format(loss=test_eval[0], accuracy=test_eval[1]))\n",
     "print(\"Error on test data: {p:.2f}%\".format(p = 100*(1-test_eval[1])))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "__(b)__ Classify instances of the test set using your models. Draw a confusion matrix and comment on the results."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "__(c)__ Choose one other algorithm from the course, and redo (a) and (b) using this algorithm. Supply a brief discussion of why we would expect this algorithm to do better/worse than the CNN."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.8835193682117054\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "Ridge(alpha=53613.36110051616)"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from sklearn.linear_model import Ridge, RidgeCV\n",
+    "from sklearn.metrics import mean_squared_error\n",
+    "import pandas as pd\n",
+    "from sklearn.preprocessing import StandardScaler\n",
+    "from sklearn.pipeline import make_pipeline \n",
+    "import numpy as np\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "\n",
+    "alphas = 10**np.linspace(10,-2,100)*0.5\n",
+    "#lasso = Lasso(max_iter = 10000) # Standard scale pipeline will fix!\n",
+    "#coefs = []\n",
+    "\n",
+    "X = np.load('/project/XSound.npy')\n",
+    "#Y = tf.keras.utils.to_categorical(np.load('/project/YSound.npy'))\n",
+    "Y = np.load('/project/YSound.npy')\n",
+    "#print(X.shape)\n",
+    "#print(Y.shape)\n",
+    "\n",
+    "X_df = pd.DataFrame(X.reshape(-1, 4030))\n",
+    "Y_df = pd.DataFrame(Y)\n",
+    "#print(Y_df.head)\n",
+    "#print(X_df.head)\n",
+    "\n",
+    "\n",
+    "X_train, X_test, Y_train, Y_test = train_test_split(X_df, Y_df, train_size=.8, random_state=0)\n",
+    "#X_train_df = df = pd.DataFrame(X_train.reshape(-1, 4030))\n",
+    "#Y_train_df = df = pd.DataFrame(Y_train)#.reshape(-1, len(Y_train)))\n",
+    "#X_test_df = df = pd.DataFrame(X_test.reshape(-1, len(X_test)))\n",
+    "#Y_test_df = df = pd.DataFrame(Y_test)#.reshape(-1, len(Y_test)))\n",
+    "\n",
+    "#print(X[0:1])\n",
+    "#print(X_train.head)\n",
+    "#print(Y[0:1])\n",
+    "#print(Y_train.head)\n",
+    "# Create a pipeline with StandardScaler and RidgeCV\n",
+    "ridgecv = make_pipeline(StandardScaler(), RidgeCV(alphas=alphas, scoring='neg_mean_squared_error'))\n",
+    "ridgecv.fit(X_train, Y_train)\n",
+    "\n",
+    "# Access the chosen alpha value from RidgeCV\n",
+    "chosen_alpha = ridgecv.named_steps['ridgecv'].alpha_\n",
+    "#print(chosen_alpha)\n",
+    "# Some of the coefficients\n",
+    "# \n",
+    "# # Create a Ridge model using the chosen alpha from RidgeCV\n",
+    "ridge_model = Ridge(alpha=ridgecv.named_steps['ridgecv'].alpha_)\n",
+    "ridge_model.fit(X_train, Y_train)\n",
+    "\n",
+    "# Calculate the test MSE using the trained Ridge model\n",
+    "mse = mean_squared_error(Y_test, ridge_model.predict(X_test))\n",
+    "print(mse) \n",
+    "ridge_model.fit(X_df, Y_df)"
    ]
   }
  ],
