--- a/assignment6/Solution.ipynb
+++ b/assignment6/Solution.ipynb
@@ -239,6 +239,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "CNN is suitable for this type of problem. TODO add why"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "__(b)__ Classify instances of the test set using your models. Draw a confusion matrix and comment on the results."
    ]
   },
@@ -342,6 +349,13 @@
     "print(\"Precision: \\n{}\\n\".format(precision))\n",
     "print(\"Recall: \\n{}\\n\".format(recall))\n",
     "print(\"F1: \\n{}\".format(f1))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "CNN did poorly. We believe that is because we have not chosen the appropiate hyperparameters values. We shall spent more time in hypertyning in the future."
    ]
   },
   {
@@ -462,6 +476,13 @@
     "plt.ylabel('Actual')\n",
     "plt.xlabel('Predicted')\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "RidgeCV did remarkably better than CNN. Our opinion is that we are more experineced with Ridge by now so that we managed to perfect it better than CNN."
    ]
   }
  ],
